--- a/AgentApplication/front/agent-app/src/app/component/registration-page/registration-page.component.html
+++ b/AgentApplication/front/agent-app/src/app/component/registration-page/registration-page.component.html
@@ -8,16 +8,16 @@
               <li>
                 <mat-form-field appearance="fill">
                   <mat-label>First name</mat-label>
-                  <input matInput type="text" name="firstname" [(ngModel)]="companyOwner.firstName" required>
-                  <mat-hint *ngIf="companyOwner.firstName == ''">Required</mat-hint>
+                  <input matInput type="text" name="firstname" [(ngModel)]="client.firstName" required>
+                  <mat-hint *ngIf="client.firstName == ''">Required</mat-hint>
                   <mat-icon matSuffix></mat-icon>
                 </mat-form-field>
               </li>
               <li>
                 <mat-form-field appearance="fill">
                   <mat-label>Last name</mat-label>
-                  <input matInput type="text" name="lastname" [(ngModel)]="companyOwner.lastName" required>
-                  <mat-hint *ngIf="companyOwner.lastName == ''">Required</mat-hint>
+                  <input matInput type="text" name="lastname" [(ngModel)]="client.lastName" required>
+                  <mat-hint *ngIf="client.lastName == ''">Required</mat-hint>
                 </mat-form-field>
               </li>
               
@@ -32,7 +32,7 @@
               <div>
                 <mat-form-field appearance="fill">
                   <mat-label>E-mail</mat-label>
-                  <input matInput type="email" name="email" [formControl]="emailControl" [(ngModel)]="companyOwner.email" required [errorStateMatcher]="matcher"
+                  <input matInput type="email" name="email" [formControl]="emailControl" [(ngModel)]="client.email" required [errorStateMatcher]="matcher"
                           placeholder="pat@example.com">
                   <mat-hint>Errors appear instantly!</mat-hint>
                   <mat-error *ngIf="emailControl.hasError('email') && !emailControl.hasError('required')">
@@ -46,23 +46,24 @@
               <div>
                 <mat-form-field appearance="fill">
                   <mat-label>Username</mat-label>
-                  <input matInput type="text" name="username" [(ngModel)]="companyOwner.username" required >     
-                  <mat-hint *ngIf="companyOwner.username == ''">Requied</mat-hint>  
-                  <mat-hint *ngIf="usernames.includes(companyOwner.username)">Username already exists!</mat-hint>        
+                  <input matInput type="text" name="username" [(ngModel)]="client.username" required >     
+                  <mat-hint *ngIf="client.username == ''">Required</mat-hint>  
+                  <mat-hint *ngIf="usernames.includes(client.username)">Username already exists!</mat-hint>        
                 </mat-form-field>
                 <!-- <div *ngIf="usernames.includes(customer.username)" class="errorText">Username already exists!</div> -->
               </div>   
               <div>
                 <mat-form-field hintLabel="Between 6 and 16 characters" appearance="fill">
                   <mat-label>Password</mat-label>
-                  <input matInput type="password" name="password" id="password" minlength="6" maxlength="16" [(ngModel)]="companyOwner.password" required>
+                  <input matInput type="password" name="password" id="password" minlength="6" maxlength="16" [(ngModel)]="client.password" required (change)="checkPass()">
+                  <mat-hint *ngIf="blackListPass">THIS PASSWORD IS NOT SECURE!</mat-hint>
                 </mat-form-field>
               </div>
               <div>
                 <mat-form-field appearance="fill">
                   <mat-label>Confirm password</mat-label>
                   <input matInput type="password" name="repassword" [(ngModel)]="repassword" required>
-                  <mat-hint *ngIf="companyOwner.password == ''">Required</mat-hint>
+                  <mat-hint *ngIf="client.password == ''">Required</mat-hint>
                 </mat-form-field>
               </div>
             
@@ -75,10 +76,15 @@
             
             <mat-step label="Submit registration request">
               <p><b>Before submiting, please choose as which user are you registrating and check info you filled</b></p>
-              <div>                  
+              <div>      
+                <mat-radio-group [(ngModel)]="role" name="role" label-position="before" required>
+                  <mat-label>Which one would you like to register?</mat-label>
+                  <mat-radio-button value="client">Regular user</mat-radio-button>
+                  <mat-radio-button value="owner">Company owner</mat-radio-button>
+                </mat-radio-group>            
                 <div style="margin-top: 2%;">
                   <button mat-button matStepperPrevious>Back</button>
-                  <button mat-raised-button color="accent" (click)="submit()" [disabled]="!(registerForm.valid && companyOwner.password === repassword)" >Submit</button>
+                  <button mat-raised-button color="accent" (click)="submit()" [disabled]="!(registerForm.valid && client.password === repassword)" >Submit</button>
                 </div>
               </div>
             </mat-step>
