--- a/AgentApplication/front/agent-app/src/app/component/header/header.component.html
+++ b/AgentApplication/front/agent-app/src/app/component/header/header.component.html
@@ -1,22 +1,16 @@
 <mat-toolbar color="primary" class="navbar">
     <button mat-button style="font-size : 25px" [routerLink]="['']">CompanyIn</button>
     <button *ngIf="roles.includes('ROLE_ADMIN')" style="margin-left : 25px" mat-button [routerLink]="['companies']">Companies</button>
-    
-    <!-- <button *ngIf="role == 'ROLE_CUSTOMER'" mat-button [matMenuTriggerFor]="menu">Reservations history</button>
-        <mat-menu #menu="matMenu">
-        <button mat-menu-item [routerLink]="['customer-past-weekend-house-reservations']">Weekend houses</button>
-        <button mat-menu-item [routerLink]="['customer-past-boat-reservations']">Boats</button>
-        <button mat-menu-item [routerLink]="['customer-past-fishing-lesson-reservations']">Fishing lessons</button>
-        </mat-menu> -->
+    <button *ngIf="roles.includes('ROLE_POTENTIAL_OWNER')" style="margin-left : 25px" mat-button [routerLink]="['create-company']">Create company</button>
 
 
 
     <span class="example-spacer" ></span>
-    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_CLIENT') || roles.includes('ROLE_COMPANY_OWNER')" mat-icon-button [routerLink]="['user-profile']">
+    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_CLIENT') || roles.includes('ROLE_COMPANY_OWNER') || roles.includes('ROLE_POTENTIAL_OWNER')" mat-icon-button [routerLink]="['user-profile']">
         <mat-icon >account_circle</mat-icon>
     </button>
-    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_CLIENT') && !roles.includes('ROLE_COMPANY_OWNER')" mat-button [routerLink]="['register']">Register</button>
-    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_CLIENT') && !roles.includes('ROLE_COMPANY_OWNER')" mat-raised-button [routerLink]="['login']">Log in</button>
-    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_CLIENT') || roles.includes('ROLE_COMPANY_OWNER')" mat-raised-button mat-button (click)="logOut()">Log out</button>
+    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_CLIENT') && !roles.includes('ROLE_COMPANY_OWNER') && !roles.includes('ROLE_POTENTIAL_OWNER')" mat-button [routerLink]="['register']">Register</button>
+    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_CLIENT') && !roles.includes('ROLE_COMPANY_OWNER') && !roles.includes('ROLE_POTENTIAL_OWNER')" mat-raised-button [routerLink]="['login']">Log in</button>
+    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_CLIENT') || roles.includes('ROLE_COMPANY_OWNER') || roles.includes('ROLE_POTENTIAL_OWNER')" mat-raised-button mat-button (click)="logOut()">Log out</button>
     </mat-toolbar>
 
