--- a/AgentApplication/front/agent-app/src/app/component/user-profile/user-profile.component.html
+++ b/AgentApplication/front/agent-app/src/app/component/user-profile/user-profile.component.html
@@ -28,7 +28,7 @@
         <mat-hint *ngIf="client.password == ''">Required</mat-hint>
       </mat-form-field>
 
-      <h1 style="margin-top: 3%;" *ngIf="role ==='ROLE_COMPANY_OWNER' || role ==='ROLE_POTENTIAL_OWNER'">Company informations</h1>
+      <h1 style="margin-top: 3%;" *ngIf="role ==='ROLE_COMPANY_OWNER'">Company informations</h1>
         <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER'" appearance="fill" style="margin-right: 2%;">
             <mat-label>Name</mat-label>
             <input matInput type="text" name="name" [(ngModel)]="owner.company.name" required>
@@ -36,26 +36,26 @@
             <mat-icon matSuffix></mat-icon>
           </mat-form-field>
       
-          <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' || role ==='ROLE_POTENTIAL_OWNER'" appearance="fill">
+          <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' " appearance="fill">
             <mat-label>Info</mat-label>
             <input matInput type="text" name="info" [(ngModel)]="owner.company.info" required>
             <mat-hint *ngIf="owner.company.info == ''">Required</mat-hint>
           </mat-form-field>
 
-          <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' || role ==='ROLE_POTENTIAL_OWNER'" appearance="fill"  style="margin-right: 2%;">
+          <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER'" appearance="fill"  style="margin-right: 2%;">
             <mat-label>City</mat-label>
             <input matInput type="text" name="city" [(ngModel)]="owner.company.city" required>
             <mat-hint *ngIf="owner.company.city == ''">Required</mat-hint>
             <mat-icon matSuffix></mat-icon>
           </mat-form-field>
 
-          <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' || role ==='ROLE_POTENTIAL_OWNER'" appearance="fill">
+          <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' " appearance="fill">
             <mat-label>Country</mat-label>
             <input matInput type="text" name="country" [(ngModel)]="owner.company.country" required>
             <mat-hint *ngIf="owner.company.country == ''">Required</mat-hint>
           </mat-form-field>
 
-          <div *ngIf="role ==='ROLE_COMPANY_OWNER' || role ==='ROLE_POTENTIAL_OWNER'" style="margin-top: 2%; margin-bottom: 2%;">
+          <div *ngIf="role ==='ROLE_COMPANY_OWNER' " style="margin-top: 2%; margin-bottom: 2%;">
             <mat-label style="padding-top: 20px;" for="positions">List of positions: </mat-label>
             <mat-select style="width: 300px;" name="positions" [(ngModel)]="selectedPositions" multiple>
                 <mat-option checkboxPosition="before" *ngFor="let service of owner.company.positions" [value]="service">
@@ -64,7 +64,7 @@
             </mat-select> 
         </div> 
     
-        <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' || role ==='ROLE_POTENTIAL_OWNER'" appearance="fill" style="margin-right: 2%;">
+        <mat-form-field *ngIf="role ==='ROLE_COMPANY_OWNER' " appearance="fill" style="margin-right: 2%;">
             <mat-label>Add new job position: </mat-label>
             <input matInput placeholder="Name of new job" name="newJobName" id="newJobName" [(ngModel)]="newJob.name" >
             <button mat-raised-button color="warn" (click)="addNewJob()" [disabled]="newJob.name === ''" >Add</button>
