--- a/front/dislinkt/src/app/component/registration-page/registration-page.component.html
+++ b/front/dislinkt/src/app/component/registration-page/registration-page.component.html
@@ -7,17 +7,40 @@
             <ul>
               <li>
                 <mat-form-field appearance="fill">
-                  <mat-label>First name</mat-label>
-                  <input matInput type="text" name="firstname" [(ngModel)]="client.firstName" required>
-                  <mat-hint *ngIf="client.firstName == ''">Required</mat-hint>
+                  <mat-label>Full name</mat-label>
+                  <input matInput type="text" name="name" [(ngModel)]="user.name" required>
+                  <mat-hint *ngIf="user.name == ''">Required</mat-hint>
                   <mat-icon matSuffix></mat-icon>
                 </mat-form-field>
               </li>
               <li>
                 <mat-form-field appearance="fill">
-                  <mat-label>Last name</mat-label>
-                  <input matInput type="text" name="lastname" [(ngModel)]="client.lastName" required>
-                  <mat-hint *ngIf="client.lastName == ''">Required</mat-hint>
+                  <mat-label>Phone number</mat-label>
+                  <input matInput type="number" name="phone" [(ngModel)]="user.phone" required>
+                  <mat-hint *ngIf="user.phone == ''">Required</mat-hint>
+                </mat-form-field>
+              </li>
+              <li style="margin-top: 35px;">
+                <mat-radio-group [(ngModel)]="user.gender" name="gender" label-position="before" required>
+                  <mat-label>Gender:</mat-label>
+                  <mat-radio-button value="Male">Male</mat-radio-button>
+                  <mat-radio-button value="Female">Female</mat-radio-button>
+                </mat-radio-group>
+              </li>
+              <li>
+                <mat-form-field appearance="fill">
+                  <mat-label>Date of birth</mat-label>
+                  <input matInput [matDatepicker]="picker" name="date" [(ngModel)]="user.date" required>
+                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+              </li>
+              <li>
+                <mat-form-field appearance="fill">
+                  <mat-label>Biography</mat-label>
+                  <textarea required matInput [(ngModel)]="user.biography"  rows="15" cols="40" ></textarea>
+                  <!-- <input matInput type="text" name="biography" [(ngModel)]="user.biography" required> -->
+                  <mat-hint *ngIf="user.biography == ''">Required</mat-hint>
                 </mat-form-field>
               </li>
               
@@ -32,7 +55,7 @@
               <div>
                 <mat-form-field appearance="fill">
                   <mat-label>E-mail</mat-label>
-                  <input matInput type="email" name="email" [formControl]="emailControl" [(ngModel)]="client.email" required [errorStateMatcher]="matcher"
+                  <input matInput type="email" name="email" [formControl]="emailControl" [(ngModel)]="user.email" required [errorStateMatcher]="matcher"
                           placeholder="pat@example.com">
                   <mat-hint>Errors appear instantly!</mat-hint>
                   <mat-error *ngIf="emailControl.hasError('email') && !emailControl.hasError('required')">
@@ -41,34 +64,34 @@
                   <mat-error *ngIf="emailControl.hasError('required')">
                     Email is <strong>required</strong>
                   </mat-error>
-                  <mat-hint *ngIf="containSpace(client.email) === true" style="color:red;">Email can not contain space.</mat-hint>
+                  <mat-hint *ngIf="containSpace(user.email) === true" style="color:red;">Email can not contain space.</mat-hint>
                 </mat-form-field>
               </div>  
               <div>
                 <mat-form-field appearance="fill">
                   <mat-label>Username</mat-label>
-                  <input matInput type="text" name="username" [(ngModel)]="client.username" required >     
-                  <mat-hint *ngIf="client.username == ''">Required</mat-hint>  
-                  <mat-hint *ngIf="usernames.includes(client.username)">Username already exists!</mat-hint>        
-                  <mat-hint *ngIf="containSpace(client.username) === true" style="color:red;">Username can not contain space.</mat-hint>
+                  <input matInput type="text" name="username" [(ngModel)]="user.username" required >     
+                  <mat-hint *ngIf="user.username == ''">Required</mat-hint>  
+                  <mat-hint *ngIf="usernames.includes(user.username)">Username already exists!</mat-hint>        
+                  <mat-hint *ngIf="containSpace(user.username) === true" style="color:red;">Username can not contain space.</mat-hint>
                 </mat-form-field>
                 <!-- <div *ngIf="usernames.includes(customer.username)" class="errorText">Username already exists!</div> -->
               </div>   
               <div>
                 <mat-form-field hintLabel="Between 8 and 20 characters, at least 1 letter, 1 number, 1 special character" appearance="fill">
                   <mat-label>Password</mat-label>
-                  <input matInput type="password" name="password" id="password" minlength="8" maxlength="20" [(ngModel)]="client.password" required (change)="checkPass()">
+                  <input matInput type="password" name="password" id="password" minlength="8" maxlength="20" [(ngModel)]="user.password" required (change)="checkPass()">
                   <mat-hint *ngIf="isInBlackList">{{blackListPassMessage}}</mat-hint>
-                  <mat-hint *ngIf="containSpace(client.password) === true" style="color:red;">Password can not contain space.</mat-hint>
-                  <mat-hint *ngIf="containAllCharacters(client.password) === false" style="color:red;">Password must contain at least 1 letter, 1 number and 1 special character</mat-hint>
+                  <mat-hint *ngIf="containSpace(user.password) === true" style="color:red;">Password can not contain space.</mat-hint>
+                  <mat-hint *ngIf="containAllCharacters(user.password) === false" style="color:red;">Password must contain at least 1 letter, 1 number and 1 special character</mat-hint>
                 </mat-form-field>
               </div>
               <div>
                 <mat-form-field appearance="fill">
                   <mat-label>Confirm password</mat-label>
                   <input matInput type="password" name="repassword" [(ngModel)]="repassword" required>
-                  <mat-hint *ngIf="client.password == ''">Required</mat-hint>
-                  <mat-hint *ngIf="client.password !== repassword">It has to match with password</mat-hint>
+                  <mat-hint *ngIf="user.password == ''">Required</mat-hint>
+                  <mat-hint *ngIf="user.password !== repassword">It has to match with password</mat-hint>
                 </mat-form-field>
               </div>
             
@@ -80,18 +103,11 @@
             </mat-step>
             
             <mat-step label="Submit registration request">
-              <p><b>Before submiting, please choose as which user are you registrating and check info you filled</b></p>
-              <div>      
-                <mat-radio-group [(ngModel)]="role" name="role" label-position="before" required>
-                  <mat-label>Which one would you like to register?</mat-label>
-                  <mat-radio-button value="client">Regular user</mat-radio-button>
-                  <mat-radio-button value="owner">Company owner</mat-radio-button>
-                </mat-radio-group>            
+              <p><b>Before submiting, please choose as which user are you registrating and check info you filled</b></p>    
                 <div style="margin-top: 2%;">
                   <button mat-button matStepperPrevious>Back</button>
-                  <button mat-raised-button color="accent" (click)="submit()" [disabled]="!(registerForm.valid && client.password === repassword && containAllCharacters(client.password))" >Submit</button>
+                  <button mat-raised-button color="accent" (click)="submit()" [disabled]="!(registerForm.valid && user.password === repassword && containAllCharacters(user.password))" >Submit</button>
                 </div>
-              </div>
             </mat-step>
       </mat-stepper>
      </form>
