--- a/front/dislinkt/src/app/component/header/header.component.html
+++ b/front/dislinkt/src/app/component/header/header.component.html
@@ -8,11 +8,11 @@
 
 
     <span class="example-spacer" ></span>
-    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_CLIENT') || roles.includes('ROLE_COMPANY_OWNER') || roles.includes('ROLE_POTENTIAL_OWNER')" mat-icon-button [routerLink]="['user-profile']">
+    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_USER')" mat-icon-button [routerLink]="['user-profile']">
         <mat-icon >account_circle</mat-icon>
     </button>
-    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_CLIENT') && !roles.includes('ROLE_COMPANY_OWNER') && !roles.includes('ROLE_POTENTIAL_OWNER')" mat-button [routerLink]="['register']">Register</button>
-    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_CLIENT') && !roles.includes('ROLE_COMPANY_OWNER') && !roles.includes('ROLE_POTENTIAL_OWNER')" mat-raised-button [routerLink]="['login']">Log in</button>
-    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_CLIENT') || roles.includes('ROLE_COMPANY_OWNER') || roles.includes('ROLE_POTENTIAL_OWNER')" mat-raised-button mat-button (click)="logOut()">Log out</button>
+    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_USER')" mat-button [routerLink]="['register']">Register</button>
+    <button *ngIf="!roles.includes('ROLE_ADMIN') && !roles.includes('ROLE_USER')" mat-raised-button [routerLink]="['login']">Log in</button>
+    <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_USER')" mat-raised-button mat-button (click)="logOut()">Log out</button>
     </mat-toolbar>
 
