create connection between 2 services

--- a/front/dislinkt/src/app/component/users/users.component.html
+++ b/front/dislinkt/src/app/component/users/users.component.html
@@ -50,7 +50,7 @@
         <div class="infoDiv"><label><b>Date of birth:  </b>   {{user.date | date: 'shortDate' }}</label></div>
         <div class="infoDiv"><label><b>Biography:  </b>   {{user.biography}}</label></div>
         <div>
-            <button style="margin-right: 3%;" mat-raised-button color="accent" [disabled]="isConnected()" (click)="connect()"  >Connect</button>
+            <button style="margin-right: 3%;" mat-raised-button color="accent" [disabled]="isConnected" (click)="connect()"  >Connect</button>
             <button mat-raised-button color="warn"  (click)="block()"  >Block</button>
           </div>
         </div>
