--- a/front/dislinkt/src/app/component/chat/chat.component.html
+++ b/front/dislinkt/src/app/component/chat/chat.component.html
@@ -10,8 +10,17 @@
         </mat-select>
     </mat-form-field>
 
+    <!-- <div>
+         <div *ngFor="let message of messages" [ngClass]="message.senderId === logedUserId ? 'leftChat' : 'rightChat'">
+        <div *ngFor="let message of messages" [ngClass]="{'leftChat' : message.senderId === logedUserId, 'rightChat' : message.senderId !== logedUserId}">
+            <div>{{message.text}}</div>
+        </div>
+    </div> -->
     <div>
-        <div *ngFor="let message of messages" [ngClass]="message.senderId == logedUserId ? 'leftChat' : 'rightChat'">{{message.text}}</div>
+        <div *ngFor="let message of messages">
+            <p *ngIf="message.senderId == logedUserId" class="leftChat">{{message.text}}</p>
+            <p *ngIf="message.senderId != logedUserId" class="rightChat">{{message.text}}</p>
+        </div>
     </div>
 
     <div>
