crete notifications for chat and requests

--- a/front/dislinkt/src/app/component/chat/chat.component.html
+++ b/front/dislinkt/src/app/component/chat/chat.component.html
@@ -10,16 +10,10 @@
         </mat-select>
     </mat-form-field>
 
-    <!-- <div>
-         <div *ngFor="let message of messages" [ngClass]="message.senderId === logedUserId ? 'leftChat' : 'rightChat'">
-        <div *ngFor="let message of messages" [ngClass]="{'leftChat' : message.senderId === logedUserId, 'rightChat' : message.senderId !== logedUserId}">
-            <div>{{message.text}}</div>
-        </div>
-    </div> -->
-    <div>
+    <div style="border: solid; width: 500px; min-height: 200px;">
         <div *ngFor="let message of messages">
-            <p *ngIf="message.senderId == logedUserId" class="leftChat">{{message.text}}</p>
-            <p *ngIf="message.senderId != logedUserId" class="rightChat">{{message.text}}</p>
+            <p *ngIf="message.senderId == logedUserId" class="leftChat">- {{message.text}}</p>
+            <p *ngIf="message.senderId != logedUserId" class="rightChat">- {{message.text}}</p>
         </div>
     </div>
 
