--- a/front/dislinkt/src/app/component/header/header.component.html
+++ b/front/dislinkt/src/app/component/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="navbar">
-    <button mat-button style="font-size : 25px" [routerLink]="['']">CompanyIn</button>
+    <button mat-button style="font-size : 25px" [routerLink]="['']">Dislinkt</button>
     <button *ngIf="roles.includes('ROLE_ADMIN')" style="margin-left : 25px" mat-button [routerLink]="['companies']">Companies</button>
     <button *ngIf="roles.includes('ROLE_USER')" style="margin-left : 25px" mat-button [routerLink]="['chat']">Chat</button>
     <button *ngIf="roles.includes('ROLE_USER')" style="margin-left : 25px" mat-button [routerLink]="['offers']">Job offers</button>
@@ -8,6 +8,9 @@
 
 
     <span class="example-spacer" ></span>
+    <button *ngIf="roles.includes('ROLE_USER')" mat-icon-button [routerLink]="['notifications']">
+        <mat-icon >notifications</mat-icon>
+    </button>
     <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_USER')" mat-icon-button [routerLink]="['user-profile']">
         <mat-icon >account_circle</mat-icon>
     </button>
