--- a/front/dislinkt/src/app/component/header/header.component.html
+++ b/front/dislinkt/src/app/component/header/header.component.html
@@ -5,7 +5,7 @@
     <button *ngIf="roles.includes('ROLE_USER')" style="margin-left : 25px" mat-button [routerLink]="['offers']">Job offers</button>
     <button *ngIf="!roles.includes('ROLE_ADMIN')" style="margin-left : 25px" mat-button [routerLink]="['users']">Users</button>
     <button *ngIf="roles.includes('ROLE_ADMIN') || roles.includes('ROLE_USER')" style="margin-left : 25px" mat-button [routerLink]="['create-job-offer']">Create job offer</button>
-
+    <button *ngIf="roles.includes('ROLE_USER')" style="margin-left : 25px" mat-button [routerLink]="['create-post']">Create post</button>
 
     <span class="example-spacer" ></span>
     <button *ngIf="roles.includes('ROLE_USER')" mat-icon-button [routerLink]="['notifications']">
